Fix drop caps rendering on Safari

--- a/sass/css/main.scss
+++ b/sass/css/main.scss
@@ -191,7 +191,7 @@ a:hover { color: var(--accent); }
   font-family: var(--font-display);
   float: left;
   font-size: 4.9em;
-  line-height: 1.0;
+  line-height: 0.63;
   padding: 0.07em 0.08em 0 0;
   color: var(--accent);
   font-weight: 500;
